# Breakout_like_game

./: CMakeLists.txt  main.cpp
App/: App.cpp  App.h
Assets/: BreakoutLevels.txt
Game/: Game.h
Game/BreakOut/: Ball.cpp  Ball.h  Block.cpp  Block.h  BoundaryEdge.h  BreakOut.cpp  BreakOut.h  BreakoutGameLevel.cpp  Excluder.cpp  Excluder.h  Paddle.cpp
Graphics/: Color.cpp  Color.h  Screen.cpp  Screen.h  ScreenBuffer.cpp  ScreenBuffer.h
Input/: GameController.cpp  GameController.h  InputAction.h  InputController.cpp  InputController.h
Scene/: ArcadeScene.cpp  ArcadeScene.h  GameScene.cpp  GameScene.h  Scene.h
Shapes/: AARectangle.cpp  AARectangle.h  Circle.cpp  Circle.h  Line2D.cpp  Line2D.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h
Utils/: FileCommandLoader.cpp  FileCommandLoader.h  Utils.cpp  Utils.h  Vec2D.cpp  Vec2D.h
